<resources>
    <string name="app_name">Android Test Task</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="country">Country:</string>
    <string name="lat">Lat:</string>
    <string name="lon">Lon:</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_name">Введите имя</string>
    <string name="add_password">Введите пароль</string>
    <string name="button_input">Войти</string>
</resources>