<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/textViewFildId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/id"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textViewFildName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            app:layout_constraintTop_toBottomOf="@+id/textViewFildId"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textViewFildCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/country"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            app:layout_constraintTop_toBottomOf="@+id/textViewFildName"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textViewFildLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/lat"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            app:layout_constraintTop_toBottomOf="@+id/textViewFildCountry"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textViewFildLon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            app:layout_constraintTop_toBottomOf="@+id/textViewFildLat"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textViewID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/textViewFildId"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/textViewFildName"
            app:layout_constraintTop_toBottomOf="@+id/textViewID"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textViewCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/textViewFildCountry"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textViewLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/textViewFildLat"
            app:layout_constraintTop_toBottomOf="@+id/textViewCountry"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/textViewLon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewFildLon"
            app:layout_constraintTop_toBottomOf="@+id/textViewLat"
            android:textSize="18sp"
            android:textAllCaps="true"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>